# services/api/src/cms/ticket.controller.ts
@@ -7,44 +7,74 @@ import {
   Get,
   Delete,
 } from '@nestjs/common';
+import {
+  Crud,
+  CrudController,
+  CrudRequest,
+  Override,
+  ParsedRequest,
+} from '@dataui/crud';
 import { TicketService } from './ticket.service';
 import { TicketEntity, TicketStatus } from './entities/ticket.entity';
 import { CreateTicketDto } from './dtos/Create-Ticket.dto';
 import { ApiTags } from '@nestjs/swagger';
 
+import {
+  AuthenticatedRoute,
+  ManagerRoute,
+  OwnerRoute,
+} from '../auth/auth.enum';
+import { BodyOwnerInject } from '../common/decorators/parameter.decorator';
+import { OwnershipEmptyInterceptor } from './interceptors/ownership-empty-interceptor.service';
+import { ProjectEntity } from './entities/project.entity';
+import { Auth } from '../auth';
+import { WithRolesEntity } from '../auth/entities/with-roles.entity';
+import { WithRolesController } from './with-roles.controller';
+
+@Crud({
+  model: {
+    type: ProjectEntity,
+  },
+  params: {
+    id: {
+      field: 'id',
+      type: 'uuid',
+      primary: true,
+    },
+  },
+  routes: {
+    exclude: [
+      'replaceOneBase',
+      'createManyBase',
+      'createManyBase',
+      'recoverOneBase',
+    ],
+    getOneBase: {
+      decorators: [Auth(AuthenticatedRoute)],
+    },
+    createOneBase: {
+      decorators: [Auth(AuthenticatedRoute)],
+    },
+    getManyBase: {
+      decorators: [Auth(AuthenticatedRoute)],
+    },
+    updateOneBase: {
+      decorators: [Auth<ProjectEntity>(ManagerRoute<ProjectEntity>)],
+      interceptors: [OwnershipEmptyInterceptor],
+    },
+    deleteOneBase: {
+      decorators: [Auth<ProjectEntity>(OwnerRoute<ProjectEntity>)],
+    },
+  },
+})
 @Controller('tickets')
 @ApiTags('Ticket')
-export class TicketController {
-  constructor(private readonly ticketService: TicketService) {}
-
-  @Post('create-ticket')
-  async create(
-    //@Param('projectId') projectId: string,
-    @Body() createTicketDto: CreateTicketDto,
-  ): Promise<TicketEntity> {
-    return this.ticketService.createTicket(createTicketDto);
-  }
-  @Put(':ticketID/status') // Ensure the route matches this pattern
-  async updateStatus(
-    @Param('ticketID') ticketID: string,
-    @Body('newStatus') newStatus: TicketStatus, // Use @Body for the new status
-  ): Promise<void> {
-    console.log(newStatus);
-    await this.ticketService.updateTicketStatus(ticketID, newStatus);
-  }
-  @Get()
-  async getAll(): Promise<TicketEntity[]> {
-    return this.ticketService.getAllTickets();
+export class TicketController implements CrudController<TicketEntity> {
+  constructor(public readonly service: TicketService) {
+    super(service);
   }
 
-  @Get('tickets/:ticketID')
-  async getTicketByID(
-    @Param('ticketID') ticketID: string,
-  ): Promise<TicketEntity> {
-    return this.ticketService.getTicketID(ticketID);
-  }
-  @Delete('delete-all') // Adjust the endpoint as needed
-  async deleteAllTickets(): Promise<void> {
-    await this.ticketService.deleteAllTickets();
+  get base(): CrudController<TicketEntity> {
+    return this;
   }
 }
